Bug 416983 - OPML extension mistranslated? Extra comma appended.
Summary: OPML extension mistranslated? Extra comma appended.
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-31 11:50 UTC by Brent
Modified: 2020-01-31 13:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.14.0
Sentry Crash Report:


Attachments
Print screen showing the extension is mistranslated. (34.16 KB, image/png)
2020-01-31 11:50 UTC, Brent
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Brent 2020-01-31 11:50:19 UTC
Created attachment 125568 [details]
Print screen showing the extension is mistranslated.

SUMMARY

Upon import of feeds, the filedialog doesn't show OPML files. Upon export the extensions `opml,` is added. Note the extra comma. I've added a screenshot of the save dialog that demonstrating `.opnl,` is automatically added.


SOFTWARE/OS VERSIONS

Updated KDE Neon User.

ADDITIONAL INFORMATION

In the source code I see no typo that explains this:
https://phabricator.kde.org/source/akregator/browse/master/src/akregator_part.cpp:602
https://phabricator.kde.org/source/akregator/browse/master/src/akregator_part.cpp:611

The only thing I can imagine is that the translation function `i18n()` adds the extra comma.
Comment 1 Laurent Montel 2020-01-31 13:14:14 UTC
yep indeed it's not a good idea to translate it.
I will fix it soon
Comment 2 Laurent Montel 2020-01-31 13:15:27 UTC
Git commit 7880bed7c155161cd46ce96e6da5b96c0c19af2e by Laurent Montel.
Committed on 31/01/2020 at 13:14.
Pushed by mlaurent into branch 'master'.

Don't translate file extension
FIXED-IN: 5.14.0

M  +2    -2    src/akregator_part.cpp

https://commits.kde.org/akregator/7880bed7c155161cd46ce96e6da5b96c0c19af2e
Comment 3 Brent 2020-01-31 13:16:59 UTC
Thanks mate!