Don't translate file extension

BUG: 416983
FIXED-IN: 5.14.0