src/akregator_part.cpp
@@ -601,7 +601,7 @@ void Part::exportFile(const QUrl &url)
 
 void Part::fileImport()
 {
-    const QString filters = i18n("OPML Outlines (*.opml *.xml);;All Files (*)");
+    const QString filters = i18n("OPML Outlines (%1);;All Files (*)", QStringLiteral("*.opml *.xml"));
     const QUrl url = QFileDialog::getOpenFileUrl(m_mainWidget, QString(), QUrl(), filters);
     if (!url.isEmpty()) {
         importFile(url);
@@ -610,7 +610,7 @@ void Part::fileImport()
 
 void Part::fileExport()
 {
-    const QString filters = i18n("OPML Outlines (*.opml *.xml);;All Files (*)");
+    const QString filters = i18n("OPML Outlines (%1);;All Files (*)", QStringLiteral("*.opml *.xml"));
     const QUrl url = QFileDialog::getSaveFileUrl(m_mainWidget, QString(), QUrl(), filters);
 
     if (!url.isEmpty()) {
